--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ a {
 .header {
   padding-top: 15px;
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 .header-logo {
   text-align: center;
@@ -712,7 +712,7 @@ a {
   display: flex;
 }
 .header-list-menu-li {
-  margin-right: 15px;
+  margin-left: 15px;
 }
 .header-list-menu-li a:hover {
   transition: 0.3s ease;
@@ -741,9 +741,10 @@ a {
   margin-right: 10px;
   width: 15px;
 }
-.header-list-main-info-ul li {
+.header-list-main-info-ul {
   display: flex;
-  margin-bottom: 8.5px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .header-list-main-info-ul a {
   border-bottom: 1px solid black;
@@ -764,6 +765,9 @@ a {
   margin-right: 15px;
 }
 
+.header-list-main-time {
+  height: 75px;
+}
 .header-list-main-time-work {
   display: flex;
   margin-bottom: 10px;
