--- a/style.css
+++ b/style.css
@@ -671,6 +671,7 @@ a {
 .header {
   padding-top: 15px;
   display: flex;
+  justify-content: space-between;
   margin-bottom: 40px;
 }
 .header-logo {
@@ -944,8 +945,12 @@ a {
 }
 
 @media (max-width: 1024px) {
+  .header-logo-picture {
+    padding-top: 35px;
+  }
   .header-list-main-close {
     display: flex;
+    margin-bottom: 40px;
   }
   .header {
     flex-direction: column;
@@ -970,6 +975,7 @@ a {
     background-color: #d77575;
     align-items: center;
     flex-direction: column;
+    justify-content: flex-start;
   }
   .header-list-main-banner {
     display: none;
@@ -1049,7 +1055,9 @@ a {
   .header-list-main-close-picture {
     cursor: pointer;
     width: 50px;
-    margin-bottom: 40px;
+  }
+  .header-list-main-time {
+    border-bottom: none;
   }
   .header-list-main-time-work {
     margin-bottom: 20px;
@@ -1064,7 +1072,9 @@ a {
     width: 100%;
     height: 100%;
     top: 0;
+    right: 0;
     background-color: #d77575;
+    border-radius: 0px;
   }
   .main-block-list {
     text-align: center;
